# carrierbot_ws

./: .gitignore  carrierbot_slam.pgm  frames.gv  map_b1_final.pgm  test.pgm  test.yaml  yaw_log.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/: README.md
src/carrierbot_base/: CMakeLists.txt  package.xml
src/carrierbot_base/src/: can_node.cpp  can_publisher.cpp  can_subscriber.cpp  robot_news_station.cpp
src/carrierbot_bringup/: CMakeLists.txt  package.xml
src/carrierbot_bringup/data_log/: robot_log.csv  yaw_log.csv  yaw_log_20260425_185434.csv
src/carrierbot_bringup/launch/: my_robot_gazebo.launch.py  my_robot_gazebo.launch.xml  real_robot.launch.py
src/carrierbot_bringup/maps/: carrierbot_slam.yaml  inside.pgm  inside.yaml  lab_map.pgm  lab_map.yaml  map_b1.pgm  map_b1.yaml  map_b1_final.yaml  map_hcmut.data  map_inside.pgm  map_inside.yaml
src/carrierbot_bringup/rviz/: nav2_default_view.rviz  rviz.rviz
src/carrierbot_bringup/worlds/: test_world.sdf
src/carrierbot_controller/: CMakeLists.txt  package.xml
src/carrierbot_controller/config/: controller.yaml  robot_controller.yaml
src/carrierbot_controller/include/carrierbot_controller/: simple_controller.hpp
src/carrierbot_controller/launch/: controller.launch.py
src/carrierbot_controller/src/: cmd_vel_relay.cpp  simple_controller.cpp
src/carrierbot_datalog/: CMakeLists.txt  package.xml
src/carrierbot_datalog/data/: amcl_odom_log_20260503_131718.csv  amcl_odom_log_20260503_132952.csv  amcl_odom_log_20260503_145247.csv  amcl_odom_log_20260504_100327.csv  amcl_odom_log_20260504_103809.csv  amcl_odom_log_20260504_104638.csv  amcl_odom_log_20260504_105110.csv  divaovadira.csv  (+37 more)
src/carrierbot_description/: CMakeLists.txt  package.xml
src/carrierbot_firmware/: CMakeLists.txt  carrierbot_interface.xml  package.xml  plot_data.py
src/carrierbot_firmware/data/: carrierbot_data_1775808132.csv  carrierbot_data_2026-04-10_15-06-56.csv  carrierbot_data_2026-04-10_15-09-38.csv  carrierbot_data_2026-04-10_15-41-09.csv  carrierbot_data_2026-04-10_15-47-51.csv  carrierbot_data_2026-04-10_15-49-42.csv  carrierbot_data_2026-04-10_15-50-34.csv  carrierbot_data_2026-04-10_16-03-44.csv  carrierbot_data_2026-04-10_16-05-35.csv  carrierbot_data_2026-04-10_16-05-55.csv  carrierbot_data_2026-04-10_16-20-18.csv
src/carrierbot_firmware/include/carrierbot_firmware/: carrierbot_interface.hpp  my_robot_interface.hpp
src/carrierbot_firmware/launch/: hardware_interface.launch.py
src/carrierbot_firmware/scripts/: twist_to_wheels.py
src/carrierbot_firmware/src/: carrierbot_interface.cpp  my_robot_interface.cpp
src/carrierbot_localization/: CMakeLists.txt  package.xml
src/carrierbot_mapping/: CMakeLists.txt  package.xml
src/carrierbot_msgs/: CMakeLists.txt  package.xml
src/carrierbot_navigation/: CMakeLists.txt  package.xml
src/carrierbot_slam/: CMakeLists.txt  package.xml
src/carrierbot_slam/carrierbot_slam/: laser_filter  telemetry_logger.py  yaw_logger.py
src/carrierbot_slam/config/: amcl.yaml  ekf.yaml  mapper_params_localization_mode.yaml  mapper_params_online_async.yaml
src/carrierbot_slam/launch/: cartographer_rplidar_s2_rviz.launch.py  csv_logger.launch.py  slam.launch.py  slam_toolbox.launch.py
src/carrierbot_slam/rviz/: cartographer.rviz  slam_toolbox.rviz
src/config/: nav2_params.yaml  twist_mux.yaml
src/my_robot_base/: CMakeLists.txt  package.xml
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_communicate/: setup.cfg  setup.py
src/my_robot_cpp_example/: CMakeLists.txt  package.xml
src/my_robot_firmware/: CMakeLists.txt  carrierbot_interface.xml  package.xml
src/my_robot_localization/: CMakeLists.txt  package.xml
src/my_robot_msgs/: CMakeLists.txt
src/robot_controller/: CMakeLists.txt  package.xml
src/rplidar_ros/: CMakeLists.txt  HUONG_DAN_LUU_MAP.md
(+126 files in other folders)
